[gd_scene load_steps=3 format=3 uid="uid://bq7evafx53mqo"]

[ext_resource type="Script" path="res://scenes/game/reward/reward.gd" id="1_57cg7"]
[ext_resource type="Texture2D" uid="uid://bxg2lxv4tbjkg" path="res://2d/creatures/player/eye.png" id="2_uqss2"]

[node name="Reward" type="VBoxContainer"]
script = ExtResource("1_57cg7")

[node name="TitleLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("2_uqss2")
expand_mode = 4
stretch_mode = 4

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
fit_content = true

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "CHOOSE"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
